--- a/src/index.css
+++ b/src/index.css
@@ -45,3 +45,10 @@ input:valid {
 .dark input:valid {
   background-color: #1a1a1a;
 }
+.container {
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
+}
