--- a/src/index.css
+++ b/src/index.css
@@ -33,7 +33,7 @@ input:valid ~ label {
 }
 input:valid {
   background-color: white;
-  outline: 1px solid gray;
+  border: 2px solid rgb(0, 0, 0);
 }
 
 .dark input:focus ~ label {
